--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "express": "^4.19.2",
     "geoip-lite": "^1.4.10",
-    "node-fetch": "^3.3.2"
+    "openweather-api-node": "^3.1.3"
   }
 }
