--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "env-cmd .config/dev.env node src/location"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "env-cmd": "^8.0.2",
     "express": "^4.19.2",
     "geoip-lite": "^1.4.10",
     "openweather-api-node": "^3.1.3"
