--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "env-cmd": "^8.0.2",
     "express": "^4.19.2",
     "geoip-lite": "^1.4.10",
     "openweather-api-node": "^3.1.3"
+  },
+  "devDependencies": {
+    "env-cmd": "^8.0.2"
   }
 }
