--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "env-cmd .config/dev.env node src/location",
+    "dev": "env-cmd .config/dev.env node api/index.js",
     "vercel-build": ""
   },
   "author": "",
